updating + fixing swagger api
