# models/api_item.go
@@ -1,0 +1,20 @@
+/*
+ * Synpasis.id backend challenge
+ *
+ * Demo Server
+ *
+ * API version: 1.0.0
+ * Contact: hadinaufal26@gmail.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+import (
+	"net/http"
+)
+
+func ListItem(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+	w.WriteHeader(http.StatusOK)
+}
