# models/model_items.go
@@ -1,0 +1,24 @@
+/*
+ * Synpasis.id backend challenge
+ *
+ * Demo Server
+ *
+ * API version: 1.0.0
+ * Contact: hadinaufal26@gmail.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type Items struct {
+
+	ItmId int32 `json:"itmId,omitempty"`
+
+	ItmName string `json:"itmName,omitempty"`
+
+	ItmPrice float32 `json:"itmPrice,omitempty"`
+
+	ItemQuantity int32 `json:"itemQuantity,omitempty"`
+
+	ItmImage string `json:"itmImage,omitempty"`
+}
