# models/model_payment.go
@@ -1,0 +1,18 @@
+/*
+ * Synpasis.id backend challenge
+ *
+ * Demo Server
+ *
+ * API version: 1.0.0
+ * Contact: hadinaufal26@gmail.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type Payment struct {
+
+	TotalItem int32 `json:"totalItem,omitempty"`
+
+	TotalPrice float32 `json:"totalPrice,omitempty"`
+}
